# pkg/routes.go
@@ -7,72 +7,79 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/uptrace/bun"
 )
 
-func SetupRouter(db *bun.DB) *gin.Engine {
+func SetupRouter() *gin.Engine {
 	r := gin.Default()
 	r.Use(config.CustomErrorHandler())
 
 	fmt.Println("----------------------------  -+-+-+-+-  -----------------------------------")
 
 	// Carpark routes
-	r.GET("/fyc/carparks", func(c *gin.Context) { GetAllCarparksAPI(c, db) })
-	r.GET("/fyc/carparks/:id", func(c *gin.Context) { GetCarparkByIDAPI(c, db) })
-	r.POST("/fyc/carparks", func(c *gin.Context) { AddCarparkAPI(c, db) })
-	r.PUT("/fyc/carparks/:id", func(c *gin.Context) { UpdateCarparkAPI(c, db) })
-	r.DELETE("/fyc/carparks/:id", func(c *gin.Context) { DeleteCarparkAPI(c, db) })
+	r.GET("/fyc/carparks", GetAllCarparksAPI)
+	r.GET("/fyc/carparks/:id", GetCarparkByIDAPI)
+	r.POST("/fyc/carparks", AddCarparkAPI)
+	r.PUT("/fyc/carparks/:id", UpdateCarparkAPI)
+	r.DELETE("/fyc/carparks/:id", DeleteCarparkAPI)
 
 	// PresentCar routes
-	r.GET("/fyc/presentcars", func(c *gin.Context) { GetPresentCarsAPI(c, db) })
-	r.GET("/fyc/presentcars/:lpn", func(c *gin.Context) { GetPresentCarByLPNAPI(c, db) })
-	r.POST("/fyc/presentcars", func(c *gin.Context) { CreatePresentCarAPI(c, db) })
-	r.PUT("/fyc/presentcars/:id", func(c *gin.Context) { UpdatePresentCarByIdAPI(c, db) })
-	r.PUT("/fyc/presentcars", func(c *gin.Context) { UpdatePresentCarBylpnAPI(c, db) })
-	r.DELETE("/fyc/presentcars/:id", func(c *gin.Context) { DeletePresentCarAPI(c, db) })
+	r.GET("/fyc/presentcars", GetPresentCarsAPI)
+	r.GET("/fyc/presentcars/:lpn", GetPresentCarByLPNAPI)
+	r.POST("/fyc/presentcars", CreatePresentCarAPI)
+	r.PUT("/fyc/presentcars/:id", UpdatePresentCarByIdAPI)
+	r.PUT("/fyc/presentcars", UpdatePresentCarBylpnAPI)
+	r.DELETE("/fyc/presentcars/:id", DeletePresentCarAPI)
 
 	// Zone routes
-	r.GET("/fyc/zones", func(c *gin.Context) { GetZonesAPI(c, db) })
-	r.GET("/fyc/zones/:id", func(c *gin.Context) { GetZoneByIDAPI(c, db) })
-	r.POST("/fyc/zones", func(c *gin.Context) { CreateZoneAPI(c, db) })
-	r.PUT("/fyc/zones/:id", func(c *gin.Context) { UpdateZoneIdAPI(c, db) })
-	r.DELETE("/fyc/zones/:id", func(c *gin.Context) { DeleteZoneAPI(c, db) })
+	r.GET("/fyc/zones", GetZonesAPI)
+	r.GET("/fyc/zones/:id", GetZoneByIDAPI)
+	r.POST("/fyc/zones", CreateZoneAPI)
+	r.PUT("/fyc/zones/:id", UpdateZoneIdAPI)
+	r.DELETE("/fyc/zones/:id", DeleteZoneAPI)
 
 	// ZoneImage routes
-	r.GET("/fyc/zonesImage", func(c *gin.Context) { GetImageZonesAPI(c, db) })
-	r.GET("/fyc/zonesImage/:id", func(c *gin.Context) { GetZoneImageByIDAPI(c, db) })
-	r.POST("/fyc/zonesImage", func(c *gin.Context) { CreateZoneImageAPI(c, db) })
-	r.PUT("/fyc/zonesImage/:id", func(c *gin.Context) { UpdateZoneImageByIdAPI(c, db) })
-	r.DELETE("/fyc/zonesImage/:id", func(c *gin.Context) { DeleteZoneImageAPI(c, db) })
+	r.GET("/fyc/zonesImage", GetImageZonesAPI)
+	r.GET("/fyc/zonesImage/:id", GetZoneImageByIDAPI)
+	r.POST("/fyc/zonesImage", CreateZoneImageAPI)
+	r.PUT("/fyc/zonesImage/:id", UpdateZoneImageByIdAPI)
+	r.DELETE("/fyc/zonesImage/:id", DeleteZoneImageAPI)
 
 	// Camera routes
-	r.GET("/fyc/cameras", func(c *gin.Context) { GetCameraAPI(c, db) })
-	r.GET("/fyc/cameras/:id", func(c *gin.Context) { GetCameraByIDAPI(c, db) })
-	r.POST("/fyc/cameras", func(c *gin.Context) { CreateCameraAPI(c, db) })
-	r.PUT("/fyc/cameras/:id", func(c *gin.Context) { UpdateCameraAPI(c, db) })
-	r.DELETE("/fyc/cameras/:id", func(c *gin.Context) { DeleteCameraAPI(c, db) })
+	r.GET("/fyc/cameras", GetCameraAPI)
+	r.GET("/fyc/cameras/:id", GetCameraByIDAPI)
+	r.POST("/fyc/cameras", CreateCameraAPI)
+	r.PUT("/fyc/cameras/:id", UpdateCameraAPI)
+	r.DELETE("/fyc/cameras/:id", DeleteCameraAPI)
 
 	// Car detail routes
-	r.GET("/fyc/carDetails", func(c *gin.Context) { GetCarDetailsAPI(c, db) })
-	r.GET("/fyc/carDetails/:id", func(c *gin.Context) { GetCarDetailsByIdAPI(c, db) })
-	r.POST("/fyc/carDetails", func(c *gin.Context) { CreateCarDetailAPI(c, db) })
-	r.PUT("/fyc/carDetails/:id", func(c *gin.Context) { UpdateCarDetailByIdAPI(c, db) })
-	r.DELETE("/fyc/carDetails/:id", func(c *gin.Context) { DeleteCarDetailAPI(c, db) })
+	r.GET("/fyc/carDetails", GetCarDetailsAPI)
+	r.GET("/fyc/carDetails/:id", GetCarDetailsByIdAPI)
+	r.POST("/fyc/carDetails", CreateCarDetailAPI)
+	r.PUT("/fyc/carDetails/:id", UpdateCarDetailByIdAPI)
+	r.DELETE("/fyc/carDetails/:id", DeleteCarDetailAPI)
 
 	// Client Creds routes
-	r.GET("/fyc/clientCreds", func(c *gin.Context) { GetAllClientCredsApi(c, db) })
-	r.GET("/fyc/clientCreds/:id", func(c *gin.Context) { GetClientCredByIDAPI(c, db) })
-	r.POST("/fyc/clientCreds", func(c *gin.Context) { AddClientCredAPI(c, db) })
-	r.PUT("/fyc/clientCreds/:id", func(c *gin.Context) { UpdateClientCredAPI(c, db) })
-	r.DELETE("/fyc/clientCreds/:id", func(c *gin.Context) { DeleteClientCredAPI(c, db) })
+	r.GET("/fyc/clientCreds", GetAllClientCredsApi)
+	r.GET("/fyc/clientCreds/:id", GetClientCredByIDAPI)
+	r.POST("/fyc/clientCreds", AddClientCredAPI)
+	r.PUT("/fyc/clientCreds/:id", UpdateClientCredAPI)
+	r.DELETE("/fyc/clientCreds/:id", DeleteClientCredAPI)
+
+	// PresentCarHistory routes
+	r.GET("/fyc/history", GetHistoryAPI)
+	r.GET("/fyc/history/:lpn", GetHistoryByLPNAPI)
+	r.POST("/fyc/history", CreateHistoryAPI)
+	r.PUT("/fyc/history/:id", UpdateHistoryAPI)
+	r.DELETE("/fyc/history/:id", DeleteHistoryAPI)
 
 	r.POST("/token", getToken)
 	r.GET("/findmycar", findMyCar)
 	r.GET("/getpicture", getPicture)
+	r.GET("/getSettings", getsettings)
 
 	r.POST("/fyc/v1/Auth/token", TokenHandler)
 
-	// Swagger documentation endpoint
+	// Swagger  endpoint
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return r
